# laund

./: .gitignore  JOB_SCRAPE.md  MESSAGES.md  STEPS.md  context.md  package.json  pnpm-lock.yaml  tsconfig.json
prisma/: schema.prisma
prisma/migrations/20260323093942_init/: migration.sql
prisma/migrations/20260330223709_name_field_max_length/: migration.sql
prisma/migrations/20260430125130_add_laundry_appid_email/: migration.sql
prisma/migrations/20260504095836_add_gupshup_entities/: migration.sql
prisma/migrations/20260505134720_add_gupshup_integration/: migration.sql
prisma/migrations/20260506222951_contact_name_optional/: migration.sql
prisma/migrations/20260507180950_wabaid_namespace_optional/: migration.sql
prisma/migrations/20260508144913_app_id_unique_field/: migration.sql
prisma/migrations/20260524222859_app_id_revert_to_optional/: migration.sql
prisma/migrations/20260616103257_add_invoice_media_id/: migration.sql
prisma/migrations/20260619164929_include_invoice_ref/: migration.sql
speech-service/: .env.example  pyproject.toml
speech-service/app/: config.py  main.py  models.py  transcriber.py
src/: app.ts  index.ts
src/config/: config.ts
src/integrations/gupshup/: auth.ts  interactive.handlers.ts  laund-ops.ts  media-ops.ts  onboarding-ops.ts  subscription-ops.ts  types.ts
src/modules/assistant/: assistant.handler.ts  assistant.prompt.ts  (+3 more)
src/routes/: index.ts
src/scripts/: api-test.ts  preview-invoice.ts
src/templates/: invoice.hbs
src/utils/: api-error.ts  catch-async.ts  item-icons.ts  logger.ts  phone.ts  z-parse.ts
(+29 files in other folders)
